--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@ under the License.
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<flink.version>1.3.0</flink.version>
 	</properties>
 
 	<repositories>
@@ -74,22 +75,17 @@ under the License.
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-java</artifactId>
-			<version>0.9.1</version>
+			<version>${flink.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.flink</groupId>
-			<artifactId>flink-streaming-core</artifactId>
-			<version>0.9.1</version>
+			<artifactId>flink-streaming-java_2.10</artifactId>
+			<version>${flink.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.flink</groupId>
-			<artifactId>flink-clients</artifactId>
-			<version>0.9.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.flink</groupId>
-			<artifactId>flink-connector-kafka</artifactId>
-			<version>0.9.1</version>
+			<artifactId>flink-connector-kafka-0.10_2.10</artifactId>
+			<version>${flink.version}</version>
 		</dependency>
 	</dependencies>
 
